--- a/userChrome.css
+++ b/userChrome.css
@@ -1,4 +1,3 @@
-
 /* Blocks all the icons in the header - use shortcuts instead! */
 #tracking-protection-icon-container,
 #tracking-protection-icon-box,
@@ -16,26 +15,26 @@
 #customizableui-special-spring1,
 #customizableui-special-spring2,
 #shopping-sidebar-button,
-#urlbar-zoom-button
-{
+#urlbar-zoom-button {
   display: none !important;
 }
 
-.tab-background
-{
+/* Ensure minimal tab background height */
+.tab-background {
   min-height: 0 !important;
 }
 
+/* Root variables for tab and URL bar dimensions */
 *|*:root {
-  --tab-min-height:           30px    !important;
-  --tab-min-width:            60px    !important;
-  --urlbar-container-height:  22px !important;
+  --tab-min-height: 30px !important;
+  --tab-min-width: 60px !important;
+  --urlbar-container-height: 22px !important;
 }
- 
+
+/* Adjustments for tab elements */
 #tabbrowser-tabs,
 #tabbrowser-tabs > #tabbrowser-arrowscrollbox,
-.tabbrowser-tabs .tabbrowser-tab 
-{
+.tabbrowser-tabs .tabbrowser-tab {
   min-height: var(--tab-min-height) !important;
   max-height: var(--tab-min-height) !important;
   box-shadow: none !important;
@@ -43,16 +42,17 @@
   -moz-box-align: none !important;
 }
 
+/* Hide URL bar related elements */
 #urlbar-results,
 #urlbar-background,
-.search-one-offs
-{
+.search-one-offs {
   display: none !important;
 }
 
+/* Adjust URL bar container margins and dimensions */
 #urlbar-container {
   margin-top: -2px !important;
-  --urlbar-container-height:  20px !important;
+  --urlbar-container-height: 20px !important;
   min-height: var(--urlbar-container-height) !important;
   max-height: var(--urlbar-container-height) !important;
 }
