--- a/userChrome.css
+++ b/userChrome.css
@@ -56,3 +56,10 @@
   min-height: var(--urlbar-container-height) !important;
   max-height: var(--urlbar-container-height) !important;
 }
+
+
+/* Adjust extension icons sizes */
+.unified-extensions-item {
+  height: 20px !important;
+  width: 20px !important;
+}
