--- a/userChrome.css
+++ b/userChrome.css
@@ -59,6 +59,7 @@
 
 
 /* Adjust extension icons sizes */
+.unified-extensions-item-row-wrapper,
 .unified-extensions-item {
   height: 20px !important;
   width: 20px !important;
